- Finish all important operations related to BST (insert, modify, remove, destroy, traverse) - Add basic animations

--- a/DataStructuresProject/DataStructuresProject.csproj
+++ b/DataStructuresProject/DataStructuresProject.csproj
@@ -38,4 +38,8 @@
       <DependentUpon>RemoveNodeDialog.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Dialogs\ModifyNodeDialog.axaml" />
+  </ItemGroup>
 </Project>
